Fix: Update bcrypt version to resolve login error

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ uvicorn
 motor
 pymongo
 python-jose[cryptography]
-passlib[bcrypt]
+passlib==1.7.4
+bcrypt==4.0.1
 pydantic[email]
 pydantic-settings
 websockets
