--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,12 @@ uvicorn
 motor
 pymongo
 python-jose[cryptography]
-passlib==1.7.4
-bcrypt==3.2.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 pydantic[email]
 pydantic-settings
+python-dotenv
+requests
 websockets
 python-multipart
 dnspython
-resend
