--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,21 +13,21 @@
     "@capacitor/cli": "^8.0.2",
     "@capacitor/core": "^8.0.2",
     "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.23",
     "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
-    "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-hot-toast": "^2.6.0",
-    "tailwindcss": "^4.1.18"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.4.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
